logs/puffer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.2.7.egg-info'...
Listing './lib/python3.5/site-packages/coverage'...
Listing './lib/python3.5/site-packages/coverage/htmlfiles'...
Listing './lib/python3.5/site-packages/coverage-3.7.1.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/get_token.py'...
***   File "./lib/python3.5/site-packages/examples/get_token.py", line 8
    print Fore.YELLOW + '---- START TOKEN RETRIEVING OPERATION ----' + Fore.RESET
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/info.py'...
***   File "./lib/python3.5/site-packages/examples/info.py", line 13
    print api.info
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/link.py'...
***   File "./lib/python3.5/site-packages/examples/link.py", line 14
    print Link(api=api, url='http%3A%2F%2Fbufferapp.com').shares
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/me.py'...
***   File "./lib/python3.5/site-packages/examples/me.py", line 21
    print Fore.YELLOW + '<< Just the basic user obj as dict >>\n' + Fore.RESET, user
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/profiles.py'...
***   File "./lib/python3.5/site-packages/examples/profiles.py", line 19
    print profiles.all()
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/update.py'...
***   File "./lib/python3.5/site-packages/examples/update.py", line 21
    print update
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/updates_and_profiles.py'...
***   File "./lib/python3.5/site-packages/examples/updates_and_profiles.py", line 21
    print profile.updates.pending
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mock-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/puffer'...
Listing './lib/python3.5/site-packages/puffer/managers'...
Listing './lib/python3.5/site-packages/puffer/models'...
Listing './lib/python3.5/site-packages/puffer/tests'...
Listing './lib/python3.5/site-packages/puffer-1.8.2.dist-info'...
Listing './lib/python3.5/site-packages/rauth'...
Listing './lib/python3.5/site-packages/rauth-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
